--- a/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">12A269</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -41,6 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{114, 148}</string>
 						<reference key="NSSuperview" ref="849152490"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545417252"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -55,6 +56,8 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{8.5, 48}, {90, 90}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="410965933">
 							<int key="NSColorSpace">3</int>
@@ -67,7 +70,8 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{2, 0}, {110, 42}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
-						<reference key="NSNextKeyView" ref="12092810"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="755707502"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -102,23 +106,25 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{34, 0}, {74, 34}}</string>
 								<reference key="NSSuperview" ref="755707502"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="12092810"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">+9999</string>
+								<string key="IBUIText">+999999</string>
 								<reference key="IBUITextColor" ref="847064458"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">26</double>
+									<double key="pointSize">18</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">26</double>
+									<double key="NSSize">18</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -128,6 +134,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{34, 34}</string>
 								<reference key="NSSuperview" ref="755707502"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="42053750"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -136,6 +143,7 @@
 						</array>
 						<string key="NSFrame">{{3, 57}, {108, 34}}</string>
 						<reference key="NSSuperview" ref="849152490"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1019837785"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="410965933"/>
@@ -144,6 +152,7 @@
 				</array>
 				<string key="NSFrameSize">{114, 148}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="956099024"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="410965933"/>
@@ -309,7 +318,7 @@
 						<string key="backgroundImageView">UIImageView</string>
 						<string key="coinImageView">UIImageView</string>
 						<string key="nickNameLabel">UILabel</string>
-						<string key="rewardCoinLabel">UILabel</string>
+						<string key="rewardCoinLabel">FXLabel</string>
 						<string key="rewardCoinView">UIView</string>
 						<string key="roundAvatarPlaceView">UIView</string>
 					</dictionary>
@@ -328,7 +337,7 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="rewardCoinLabel">
 							<string key="name">rewardCoinLabel</string>
-							<string key="candidateClassName">UILabel</string>
+							<string key="candidateClassName">FXLabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="rewardCoinView">
 							<string key="name">rewardCoinView</string>
